MWPW-194417 Fix mobile spacing issues on banner-bg, color-extract, and how-to-v2

--- a/express/code/blocks/color-extract/color-extract.css
+++ b/express/code/blocks/color-extract/color-extract.css
@@ -993,7 +993,6 @@ body:has(.color-headline.extract) .color-extract .color-extract-landing-bg {
   .section:has(.color-extract-marquee-wrapper) {
     align-items: center;
     min-height: 800px;
-    padding-inline: 0;
   }
 
   .color-extract .color-extract-landing {
